<resources>
    <string name="app_name">MarvelApp</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home Page</string>
    <string name="character">Character</string>
    <string name="comic">Comic</string>
    <string name="creator">Creator</string>
    <string name="event">Event</string>
    <string name="series">Series</string>
    <string name="stories">Stories</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="temp_character_name">Doctor Strange</string>
    <string name="temp_character_description">Stephen Strange</string>
    <string name="temp_creator_name">Russell Dauterman</string>
    <string name="temp_comic_name">Ms. Marvel and Wolverine #1</string>
    <string name="temp_start_date">start date:</string>
    <string name="detail_temp_start_date">23/08/2001</string>
    <string name="temp_end_date">end date:</string>
    <string name="temp_rating_point">4.9</string>
    <string name="temp_start_year">start year:</string>
    <string name="detail_temp_start_year">2001</string>
    <string name="temp_end_year">end year:</string>
    <string name="detail_temp_end_year">2002</string>
    <string name="temp_detail_character_name">3D Man</string>
    <string name="temp_description">Description:</string>
    <string name="temp_comic_list">Comic:</string>
    <string name="temp_series_list">Series:</string>
    <string name="temp_detail_stories_list">Stories:</string>
    <string name="temp_detail_event_list">Event:</string>
    <string name="detail_about_this_character"><u>Detail about this character</u></string>
    <string name="text_wiki_about_this_character"><u>Wiki about this character</u></string>
    <string name="text_comic_link_about_this_character"><u>Comic link about this character</u></string>
    <string name="temp_text_character_description">Nothing.</string>
    <string name="temp_more_information">More information</string>
    <string name="temp_print_price">Print price:</string>
    <string name="text_print_price_default">2.99$</string>
    <string name="temp_number_of_pages">Number of pages:</string>
    <string name="temp_creators_list">Creators:</string>
    <string name="temp_characters_list">Characters:</string>
    <string name="text_detail_about_this_comic"><u>Detail about this comic</u></string>
    <string name="text_detail_about_this_creator"><u>Detail about this creator</u></string>
    <string name="text_detail_about_this_event"><u>Detail about this event</u></string>
    <string name="text_wiki_about_this_event"><u>Wiki about this event</u></string>
    <string name="text_detail_about_this_series"><u>Detail about this series</u></string>
    <string name="text_wiki_about_this_series"><u>Wiki about this series</u></string>
    <string name="text_temp_link">temp link</string>
    <string name="text_menu_item">Character</string>
    <string name="text_recycler_view_comic_not_found">Doesn\'t have any comics</string>
    <string name="text_recycler_view_series_not_found">Doesn\'t have any series</string>
    <string name="text_recycler_view_stories_not_found">Doesn\'t have any stories</string>
    <string name="text_recycler_view_event_not_found">Doesn\'t have any events</string>
    <string name="text_recycler_view_creators_not_found">Doesn\'t have any creators</string>
    <string name="text_recycler_view_characters_not_found">Doesn\'t have any characters</string>
    <string name="text_detail_series"><u>Marvel Previews (2017 - Present)</u></string>
    <string name="temp_text_number_of_pages">112 pages</string>
    <string name="text_chip_all_category">All</string>
    <string name="text_result_search_not_found">Doesn\'t match any results</string>
    <string name="text_chip_deselect_all">Deselect All</string>
    <string name="text_temp_long_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Montes nascetur ridiculus mus mauris vitae ultricies leo. Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam. Enim praesent elementum facilisis leo vel fringilla. Neque laoreet suspendisse interdum consectetur libero id faucibus. Faucibus scelerisque eleifend donec pretium vulputate sapien nec sagittis. Tellus mauris a diam maecenas sed enim ut sem viverra. Ornare arcu dui vivamus arcu felis bibendum ut tristique et. Et malesuada fames ac turpis. Arcu non odio euismod lacinia at. Tincidunt tortor aliquam nulla facilisi. Suspendisse potenti nullam ac tortor. Ultricies lacus sed turpis tincidunt id aliquet risus feugiat in. Augue neque gravida in fermentum et sollicitudin ac orci phasellus. Amet mattis vulputate enim nulla aliquet porttitor lacus luctus.</string>
    <string name="text_temp_search_results">Search Results</string>
    <string name="title_activity_main2">MainActivity2</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="favorite">Favorite</string>
    <string name="text_temp_big_title">Title</string>
    <string name="text_title_no_internet">OOPS!!</string>
    <string name="text_info_no_internet">No Internet Connection!</string>
</resources>
