<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/layout_event_item"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_corner_all_5dp"
    android:layout_margin="@dimen/margin_10dp">

    <ImageView
        android:id="@+id/image_event"
        android:layout_width="@dimen/image_character_width"
        android:layout_height="@dimen/image_character_height"
        android:src="@drawable/character_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="@dimen/max_width_text"
        android:maxLines="1"
        android:text="Event 1"
        android:textAllCaps="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_event"
        android:layout_marginStart="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_5dp"/>

    <TextView
        android:id="@+id/temp_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_start_date"
        android:fontFamily="@font/comfortaa_bold"
        android:textSize="@dimen/text_size_15sp"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/text_event_name"
        app:layout_constraintStart_toStartOf="@id/text_event_name"
        android:layout_marginTop="@dimen/margin_5dp"/>

    <TextView
        android:id="@+id/text_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_temp_start_date"
        android:fontFamily="@font/comfortaa_light"
        android:textSize="@dimen/text_size_15sp"
        app:layout_constraintTop_toTopOf="@id/temp_start_date"
        app:layout_constraintStart_toEndOf="@id/temp_start_date"
        android:layout_marginStart="@dimen/margin_5dp"/>

    <TextView
        android:id="@+id/temp_end_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_end_date"
        android:fontFamily="@font/comfortaa_bold"
        android:textSize="@dimen/text_size_15sp"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/text_start_date"
        app:layout_constraintStart_toStartOf="@id/text_event_name"
        android:layout_marginTop="@dimen/margin_5dp"/>

    <TextView
        android:id="@+id/text_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_temp_start_date"
        android:fontFamily="@font/comfortaa_light"
        android:textSize="@dimen/text_size_15sp"
        app:layout_constraintTop_toTopOf="@id/temp_end_year"
        app:layout_constraintStart_toEndOf="@id/temp_end_year"
        android:layout_marginStart="@dimen/margin_5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
